--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="ugtf-8">
   <title>zabuza momochi</title>
   <base href="/">
 
@@ -10,6 +10,28 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+  <nav class="navbar navbar-dark bg-primary">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Listagem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Config.</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Sair</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <app-root></app-root>
 </body>
 
